--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nodemailer": "^6.9.9",
+    "nodemailer-express-handlebars": "^6.1.2",
     "nodemon": "^3.0.3"
   }
 }
